Link fix; make images align center

--- a/style.css
+++ b/style.css
@@ -17,3 +17,7 @@ body {
 li {
   margin-left: 1em;
 }
+
+img {
+  margin: auto;
+}
